--- a/Src/MarkdownDeepEditor/MarkdownDeepEditor.csproj
+++ b/Src/MarkdownDeepEditor/MarkdownDeepEditor.csproj
@@ -80,32 +80,39 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Styles\PrevalueEditor.css" />
+    <EmbeddedResource Include="Resources_OLD\Styles\PrevalueEditor.css" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\MarkEdit\examples\basic.html" />
-    <Content Include="Resources\MarkEdit\examples\dark-theme.html" />
-    <Content Include="Resources\MarkEdit\examples\flickr-image-gallery.html" />
-    <Content Include="Resources\MarkEdit\examples\in-chinese.html" />
-    <Content Include="Resources\MarkEdit\examples\in-place-editing-with-preview.html" />
-    <Content Include="Resources\MarkEdit\examples\in-place-editing.html" />
-    <Content Include="Resources\MarkEdit\examples\multiple-editors.html" />
-    <Content Include="Resources\MarkEdit\examples\multiple-preview-panes.html" />
-    <Content Include="Resources\MarkEdit\images\wmd-buttons-dark.png" />
-    <EmbeddedResource Include="Resources\MarkEdit\images\wmd-buttons.png" />
-    <EmbeddedResource Include="Resources\MarkEdit\jquery.markedit.css" />
-    <EmbeddedResource Include="Resources\MarkEdit\jquery.markedit.js" />
-    <Content Include="Resources\MarkEdit\lang\markedit.lang.de.js" />
-    <Content Include="Resources\MarkEdit\lang\markedit.lang.es.js" />
-    <Content Include="Resources\MarkEdit\lang\markedit.lang.template.js" />
-    <Content Include="Resources\MarkEdit\lang\markedit.lang.zh.js" />
-    <Content Include="Resources\MarkEdit\mit license.txt" />
-    <Content Include="Resources\MarkEdit\readme.txt" />
-    <EmbeddedResource Include="Resources\MarkEdit\showdown.js" />
+    <Content Include="Resources\MarkdownDeepLib.js" />
+    <Content Include="Resources\mdd_ajax_loader.gif" />
+    <Content Include="Resources\mdd_gripper.png" />
+    <Content Include="Resources\mdd_help.html" />
+    <Content Include="Resources\mdd_modal_background.png" />
+    <Content Include="Resources\mdd_styles.css" />
+    <Content Include="Resources\mdd_toolbar.png" />
+    <Content Include="Resources_OLD\MarkEdit\examples\basic.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\dark-theme.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\flickr-image-gallery.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\in-chinese.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\in-place-editing-with-preview.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\in-place-editing.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\multiple-editors.html" />
+    <Content Include="Resources_OLD\MarkEdit\examples\multiple-preview-panes.html" />
+    <Content Include="Resources_OLD\MarkEdit\images\wmd-buttons-dark.png" />
+    <EmbeddedResource Include="Resources_OLD\MarkEdit\images\wmd-buttons.png" />
+    <EmbeddedResource Include="Resources_OLD\MarkEdit\jquery.markedit.css" />
+    <EmbeddedResource Include="Resources_OLD\MarkEdit\jquery.markedit.js" />
+    <Content Include="Resources_OLD\MarkEdit\lang\markedit.lang.de.js" />
+    <Content Include="Resources_OLD\MarkEdit\lang\markedit.lang.es.js" />
+    <Content Include="Resources_OLD\MarkEdit\lang\markedit.lang.template.js" />
+    <Content Include="Resources_OLD\MarkEdit\lang\markedit.lang.zh.js" />
+    <Content Include="Resources_OLD\MarkEdit\mit license.txt" />
+    <Content Include="Resources_OLD\MarkEdit\readme.txt" />
+    <EmbeddedResource Include="Resources_OLD\MarkEdit\showdown.js" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\MarkEdit\images\wmd-buttons-dark.psd" />
-    <None Include="Resources\MarkEdit\images\wmd-buttons.psd" />
+    <None Include="Resources_OLD\MarkEdit\images\wmd-buttons-dark.psd" />
+    <None Include="Resources_OLD\MarkEdit\images\wmd-buttons.psd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MarkdownDeepEditor.Helpers\MarkdownDeepEditor.Helpers.csproj">
