Resolved issue #1; add CSS feature to customize preview style.

--- a/Src/MarkdownDeepEditor/MarkdownDeepEditor.csproj
+++ b/Src/MarkdownDeepEditor/MarkdownDeepEditor.csproj
@@ -93,6 +93,9 @@
     <EmbeddedResource Include="Resources\MDDEditor_custom\mdd_styles.css" />
     <EmbeddedResource Include="Resources\PrevalueEditor\style.css" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\MDDEditor\mdd_preview.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
